--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,18 @@
 [submodule "tests/fixtures/go/Helen"]
 	path = tests/fixtures/go/Helen
 	url = https://github.com/tf2stadium/Helen
+[submodule "emacs/haskell-mode"]
+	path = emacs/haskell-mode
+	url = https://github.com/haskell/haskell-mode.git
+[submodule "markdown-mode"]
+	path = markdown-mode
+	url = https://github.com/jrblevin/markdown-mode.git
+[submodule "emacs/markdown-mode"]
+	path = emacs/markdown-mode
+	url = https://github.com/jrblevin/markdown-mode.git
+[submodule "emacs/lsp-ui"]
+	path = emacs/lsp-ui
+	url = https://github.com/emacs-lsp/lsp-ui.git
+[submodule "emacs/go-mode"]
+	path = emacs/go-mode
+	url = https://github.com/dominikh/go-mode.el.git
