--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "emacs/lsp-groovy"]
 	path = emacs/lsp-groovy
 	url = https://github.com/emacs-lsp/lsp-groovy.git
+[submodule "emacs/lsp-ruby"]
+	path = emacs/lsp-ruby
+	url = https://github.com/emacs-lsp/lsp-ruby.git
